static files added

--- a/test_app/oauth/templates/oauth/index.html
+++ b/test_app/oauth/templates/oauth/index.html
@@ -2,82 +2,7 @@
 <html>
   <head>
     <title>{%trans "An exemplary OAuth Google app"%}</title>
-    <style type=text/css>
-      table {
-        width: 860px;
-        table-layout: auto;
-        font-size: 12px;
-        text-align: left;
-        border-collapse: collapse;
-        margin: 10px;
-        border-spacing: 0;
-      }
-      table th{
-        font-size: 1.1em;
-        font-weight: bold;
-        border-top: 2px solid #D3DDFF;
-        border-bottom: 1px solid white;
-        color: #000;
-        padding: 8px 0 8px 4px;
-        background: linear-gradient(top, white 0%,#7EBCE7 100%);
-        background: -moz-linear-gradient(top, white 0%, #7EBCE7 100%);
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,white), color-stop(100%,#7EBCE7));
-        background: -webkit-linear-gradient(top, white 0%,#7EBCE7 100%);
-        background: -o-linear-gradient(top, white 0%,#7EBCE7 100%);
-        background: -ms-linear-gradient(top, white 0%,#7EBCE7 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#7EBCE7',GradientType=0 );
-        background: linear-gradient(top, white 0%,#7EBCE7 100%);
-    }
-    table th:nth-child(1), 
-    table th:nth-child(3),
-    table th:nth-child(4){
-        width: 150px;
-    }
-    
-    table tr:first-child th:first-child{
-        border-top-left-radius: 8px;
-    }
-    
-    table tr:first-child th:first-child{
-        border-top-right-radius: 8px;
-    }
-    
-    table tr:last-child td:first-child{
-        border-bottom-left-radius: 8px;
-    }
-    
-    table tr:last-child td:last-child{
-        border-bottom-right-radius: 8px;
-    }
-    
-    table td{
-        border-bottom: 1px solid white;
-        color: #666;
-        border-top: 1px solid white;
-        background: linear-gradient(top, white 0%,#ECF0F8 100%);
-        background: -moz-linear-gradient(top, white 0%, #ECF0F8 100%);
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,white), color-stop(100%,#ECF0F8));
-        background: -webkit-linear-gradient(top, white 0%,#ECF0F8 100%);
-        background: -o-linear-gradient(top, white 0%,#ECF0F8 100%);
-        background: -ms-linear-gradient(top, white 0%,#ECF0F8 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ECF0F8',GradientType=0 );
-        background: linear-gradient(top, white 0%,#ECF0F8 100%);
-        padding: 8px 4px;
-    }
-    
-    table tr:hover td{
-        color: black;
-        background: linear-gradient(top, white 0%,#E5EBF8 100%);
-        background: -moz-linear-gradient(top, white 0%, #E5EBF8 100%);
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,white), color-stop(100%,#E5EBF8));
-        background: -webkit-linear-gradient(top, white 0%,#E5EBF8 100%);
-        background: -o-linear-gradient(top, white 0%,#E5EBF8 100%);
-        background: -ms-linear-gradient(top, white 0%,#E5EBF8 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#E5EBF8',GradientType=0 );
-        background: linear-gradient(top, white 0%,#E5EBF8 100%);
-    }
-        
-    </style>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" media="screen" />
   </head>
   <body>
       <h1>{%trans "Hi"%} {{user.username}}! {%trans "Here are your Google analytics accounts"%} </h1>
