--- a/test_app/oauth/templates/oauth/index2.html
+++ b/test_app/oauth/templates/oauth/index2.html
@@ -2,125 +2,11 @@
 <html>
   <head>
     <title>{%trans "An exemplary OAuth Google app"%}</title>
-    <style type=text/css>
-      table {
-        width: 860px;
-        table-layout: auto;
-        font-size: 12px;
-        text-align: left;
-        border-collapse: collapse;
-        margin: 10px;
-        border-spacing: 0;
-      }
-      table th{
-        font-size: 1.1em;
-        font-weight: bold;
-        border-top: 2px solid #D3DDFF;
-        border-bottom: 1px solid white;
-        color: #000;
-        padding: 8px 0 8px 4px;
-        background: linear-gradient(top, white 0%,#7EBCE7 100%);
-        background: -moz-linear-gradient(top, white 0%, #7EBCE7 100%);
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,white), color-stop(100%,#7EBCE7));
-        background: -webkit-linear-gradient(top, white 0%,#7EBCE7 100%);
-        background: -o-linear-gradient(top, white 0%,#7EBCE7 100%);
-        background: -ms-linear-gradient(top, white 0%,#7EBCE7 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#7EBCE7',GradientType=0 );
-        background: linear-gradient(top, white 0%,#7EBCE7 100%);
-    }
-    table th:nth-child(1), 
-    table th:nth-child(3),
-    table th:nth-child(4){
-        width: 150px;
-    }
-    
-    table tr:first-child th:first-child{
-        border-top-left-radius: 8px;
-    }
-    
-    table tr:first-child th:first-child{
-        border-top-right-radius: 8px;
-    }
-    
-    table tr:last-child td:first-child{
-        border-bottom-left-radius: 8px;
-    }
-    
-    table tr:last-child td:last-child{
-        border-bottom-right-radius: 8px;
-    }
-    
-    table td{
-        border-bottom: 1px solid white;
-        color: #666;
-        border-top: 1px solid white;
-        background: linear-gradient(top, white 0%,#ECF0F8 100%);
-        background: -moz-linear-gradient(top, white 0%, #ECF0F8 100%);
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,white), color-stop(100%,#ECF0F8));
-        background: -webkit-linear-gradient(top, white 0%,#ECF0F8 100%);
-        background: -o-linear-gradient(top, white 0%,#ECF0F8 100%);
-        background: -ms-linear-gradient(top, white 0%,#ECF0F8 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ECF0F8',GradientType=0 );
-        background: linear-gradient(top, white 0%,#ECF0F8 100%);
-        padding: 8px 4px;
-    }
-    
-    table tr:hover td{
-        color: black;
-        background: linear-gradient(top, white 0%,#E5EBF8 100%);
-        background: -moz-linear-gradient(top, white 0%, #E5EBF8 100%);
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,white), color-stop(100%,#E5EBF8));
-        background: -webkit-linear-gradient(top, white 0%,#E5EBF8 100%);
-        background: -o-linear-gradient(top, white 0%,#E5EBF8 100%);
-        background: -ms-linear-gradient(top, white 0%,#E5EBF8 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#E5EBF8',GradientType=0 );
-        background: linear-gradient(top, white 0%,#E5EBF8 100%);
-    }
-        
-    </style>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" media="screen" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/widget.js"></script>
     <script>
-    function widget(id, url){
-        var hheader = ['name', 'kind', 'created', 'updated'];
-        function init(){
-            var thead = $('<thead></thead>').append();
-            var tr = $('<tr></tr>');
-            for(var a=0; a < hheader.length; ++a){
-                var th = $('<th></th>').attr('scope','col').text(hheader[a].charAt(0).toUpperCase() + hheader[a].slice(1));
-                tr.append(th);
-            }
-            var table = $('<table></table>').append(thead.append(tr)).attr('id',id).append($('<tbody></tbody>'));
-            table.data('widget_data_' + id);
-            return table;
-        }
-        function updateData(element, data){
-            var current_data = element.data('widget_data_' + id);
-            $.extend(true, current_data, data);
-            element.data('widget_data_' + id, data);
-        }
-        function refreshData(data){
-            updateData(element, data);
-            element.children('tbody').find('tr').remove();
-            for(var a=0; a < data.items.length; ++a){
-                var tr = $('<tr></tr>');
-                for(var b=0; b < hheader.length; ++b){
-                    tr.append($('<td></td>').text(data.items[a][hheader[b]]));
-                }
-                element.append(tr);
-            }
-        }
-        function fetchData(){
-            $.get(url, function(dd){refreshData(dd)}, 'json');
-        }
-        function startInterval(fn, seconds){
-            setInterval(function(){fn();},seconds*1000);
-        }
-        var element = init();
-        fetchData();
-        startInterval(fetchData, 10);
-        return element;
-    }
     $(document).ready(function(){
         var w1 = widget('table1','/api?call=/management/accounts/list');
         $('body').append(w1);
